Refactor utility classes and improve API documentation
- Prevent instantiation of utility classes ResponseUtil and MdcUtil
- Update Swagger annotations to remove required attributes from schema descriptions
- Enhance error handling in GlobalExceptionHandler with detailed logging
- Introduce CategoryService and CategoryController for category management
- Implement search functionality for freelancers in UserProfileController
- Refactor PaymentService to validate escrow release logic
- Update ProjectController to include freelancer invitation functionality